# AI-Smart-Terms-Conditions-Digest-Agent

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: debug_key.py  diagnose_backend.py  diagnose_model.py  pyproject.toml  requirements.txt
backend/app/: main.py  schemas.py
backend/app/agents/: extract_agent.py  graph.py  proscons_agent.py  risk_agent.py  summary_agent.py  tts_agent.py
backend/app/db/: database.py  models.py
backend/app/services/: gemini_client.py  parser.py  sarvam_client.py
backend/tests/: conftest.py  test_agents.py  test_main.py  test_parser.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/services/: api.ts
