[project]
name = "ai-smarttermsdigest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.129.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.0.1",
]
